--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+#jdbc:postgresql://heroku//5673
+spring.datasource.url=jdbc:postgresql://localhost:5432/songr
+spring.datasource.username=postgres
+spring.datasource.password=password
+#//spring.jpa.hibernate.dll-auto=create //create and drop tables everytime you run your app
+# UPDATE means check current STATE of DB, updates what ity needs to
+# NONE, CREATE-DROP,
+spring.jpa.hibernate.dll-auto=update
+spring.jpa.generate-ddl=true
